@@ -532,7 +532,7 @@
 <tr class="row-even"><td><p><em>description</em></p></td>
 <td><p>the vertical grid is inverted to make it ascending</p></td>
 </tr>
-<tr class="row-odd"><td rowspan="3"><p><strong>CO_column_number_density_apriori</strong></p></td>
+<tr class="row-odd"><td rowspan="4"><p><strong>CO_column_number_density_apriori</strong></p></td>
 <td><p><em>available</em></p></td>
 <td><p>optional</p></td>
 </tr>
@@ -542,19 +542,22 @@
 <tr class="row-odd"><td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/carbonmonoxide_profile_apriori[]</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><strong>H2O_column_number_density</strong></p></td>
+<tr class="row-even"><td><p><em>description</em></p></td>
+<td><p>the vertical grid is inverted to make it ascending</p></td>
+</tr>
+<tr class="row-odd"><td><p><strong>H2O_column_number_density</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/DETAILED_RESULTS/water_total_column[]</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>H2O_column_number_density_uncertainty</strong></p></td>
+<tr class="row-even"><td><p><strong>H2O_column_number_density_uncertainty</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/DETAILED_RESULTS/water_total_column_precision[]</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><strong>cloud_height</strong></p></td>
+<tr class="row-odd"><td><p><strong>cloud_height</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/DETAILED_RESULTS/height_scattering_layer[]</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>cloud_optical_depth</strong></p></td>
+<tr class="row-even"><td><p><strong>cloud_optical_depth</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/DETAILED_RESULTS/scattering_optical_thickness_SWIR[]</strong></p></td>
 </tr>
